# tbib-dz

./: .replit  ARCHITECTURE.md  fix_prescriptions.py  replit.md  verify_walkin.py
TBIB/: .envx  .gitignore  AGENT_PROTOCOL.md  ARCHITECTURE.md  DEV_SETUP.MD  JULES_AUDIT_REPORT.md  MIGRATION_LOG.md  MIGRATION_LOG_EWASSFA.md  PRE_AUDIT_BASELINE.md  app.py  chaos_report.md  extensions.py  main.py  models.py  pharmacy_routes.py  prescription_routes.py  prescription_routes.py.backup  pyproject.toml  replit.md  requirements.txt  reset_pass.py  routes.py  routes.py.backup  seed_data.py  seed_prod.py  verify_template.py
TBIB/SERVICES/: billing.py  ewassfa.py  smartflow.py
TBIB/attached_assets/: Pasted--PROMPT-TBIB-V10-THE-COMPLETE-PLATFORM-OVERHAUL-SEARCH-_1766348889802.txt  Pasted--PROMPT-TBIB-V15-THE-ULTIMATE-DOCTOLIB-TRANSFORMATION-F_1766353901343.txt  Pasted--PROMPT-TBIB-V19-THE-CALENDAR-SCHEDULING-ENGINE-Role-Se_1766355316384.txt  Pasted--PROMPT-TBIB-V24-THE-COMPLETE-DOCTOLIB-PRO-TRANSFORMATI_1766357046840.txt  Pasted--PROMPT-TBIB-V28-ULTIMATE-DOCTOR-SETTINGS-PATIENT-DATA-_1766393524870.txt  Pasted--PROMPT-TBIB-V4-FINAL-PLATFORM-ARCHITECTURE-COST-EFFICI_1766345725816.txt  Pasted--PROMPT-TBIB-V41-MANUAL-SEEDING-SCRIPT-SHELL-EXECUTION-_1766414292002.txt  Pasted--PROMPT-TBIB-V55-FAMILY-RELATIVES-MANAGEMENT-Role-Senio_1766420533444.txt  Pasted-Act-as-a-Senior-Backend-Architect-We-are-upgrading-the-_1766356870480.txt  Pasted-C-est-normal-nous-avons-cr-le-lien-dans-le-menu-le-bout_1766394294263.txt  (+3 more)
TBIB/instance/: tbib.db
TBIB/static/: manifest.json  sw.js
(+80 files in other folders)
