[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "werkzeug>=3.1.4",
    "flask-babel>=4.0.0",
    "qrcode[pil]>=8.2",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
    "playwright>=1.57.0",
]
